--- a/14-ingress/service-1.yaml
+++ b/14-ingress/service-1.yaml
@@ -4,7 +4,7 @@ metadata:
   name: app1-svc
 spec:
   # On docker desktop load-balancer type would map service to 'localhost'
-  type: NodePort
+  type: ClusterIP
   selector:
     app: app1
   ports:
