--- a/08-replicaset/replica1.yaml
+++ b/08-replicaset/replica1.yaml
@@ -16,7 +16,7 @@ spec:
         name: myapp
     spec:
       containers:
-        - image: nginx:1.7.9
+        - image: mahendrshinde/myweb:latest
           name: web
           ports:
             - containerPort: 80
