--- a/03-basic-pod/basic-pod3.yaml
+++ b/03-basic-pod/basic-pod3.yaml
@@ -11,12 +11,12 @@ spec:
   containers:   # list of containers 
   # start of first container
   - name: web3  # name for container
-    image: nginx:1.7.9  # container image 
+    image: mahendrshinde/myweb:latest  # container image 
     # Optional resource contraints
     resources:
       limits:
-        memory: "128Mi"
-        cpu: "500m"
+        memory: "64Mi"
+        cpu: "100m"
     # application port (nginx uses 80)
     ports:
       - containerPort: 80
@@ -35,7 +35,7 @@ spec:
     resources:
       limits:
         memory: "256Mi"
-        cpu: "100m"
+        cpu: "500m"
     ports:
       - containerPort: 3306
   # start of third container
