--- a/04-volume-pod/pod-volume1.yaml
+++ b/04-volume-pod/pod-volume1.yaml
@@ -10,7 +10,7 @@ spec:
 
   containers:
   - name: myapp
-    image: nginx:1.7.9
+    image: mahendrshinde/myweb:latest
     volumeMounts:
       - name: vol1
         mountPath: "/data"
