--- a/05-volume-pod/pod-volume2.yaml
+++ b/05-volume-pod/pod-volume2.yaml
@@ -15,7 +15,7 @@ spec:
         
   containers:
   - name: myapp2
-    image: nginx:1.7.9
+    image: mahendrshinde/myweb:latest
     volumeMounts:
       - name: vol1
         mountPath: "/data"
