--- a/04-volume-pod/pod-volume1.yaml
+++ b/04-volume-pod/pod-volume1.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: volume-pod1
+  name: pod-volume1
   labels:
-    name: volume-pod1
+    name: pod-volume1
 spec:
   volumes:
     - name: vol1
+      hostPath:
+          path: /home/mahendra/mydata
 
   containers:
   - name: myapp
