--- a/14-ingress/deployment.yml
+++ b/14-ingress/deployment.yml
@@ -1,9 +1,12 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webapp1
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: webapp1
   template:
     metadata:
       labels:
@@ -15,12 +18,15 @@ spec:
         ports:
         - containerPort: 80
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webapp2
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: webapp2
   template:
     metadata:
       labels:
@@ -32,12 +38,15 @@ spec:
         ports:
         - containerPort: 80
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webapp3
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: webapp3
   template:
     metadata:
       labels:
