--- a/11-end-to-end-deployment-aks/deploy-app.yaml
+++ b/11-end-to-end-deployment-aks/deploy-app.yaml
@@ -12,12 +12,9 @@ spec:
       labels:
         app: app1
     spec:
-      ### Docker registry secret mapping for current deployment
-      imagePullSecrets:
-        - name: reg1
       containers:
       - name: app1
         imagePullPolicy: IfNotPresent
-        image: myacr0123.azurecr.io/myweb:latest
+        image: mahendrshinde/myweb:latest
         ports:
         - containerPort: 80
