updated-nginx-ingress-controller

--- a/18-deploy-jobs/myjob-2.yaml
+++ b/18-deploy-jobs/myjob-2.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     name: myjob-2
 spec:
-  schedule: "*/1 * * * *"
+  schedule: "*/1 * * * 4-6"
   jobTemplate:
     spec:
       ttlSecondsAfterFinished: 30
