--- a/10-service/deploy-app.yaml
+++ b/10-service/deploy-app.yaml
@@ -16,6 +16,6 @@ spec:
         kubernetes.io/os: linux
       containers:
       - name: app1
-        image: mahendrshinde/myweb:latest
+        image: mahendrshinde/myweb:3
         ports:
         - containerPort: 80
