--- a/10-service/service-1.yaml
+++ b/10-service/service-1.yaml
@@ -4,10 +4,10 @@ metadata:
   name: app1-svc
 spec:
   # On docker desktop load-balancer type would map service to 'localhost'
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: app1
   ports:
-  - port: 8080
+  - port: 80
     targetPort: 80
-    nodePort: 30009
+    
