--- a/14-ingress/deployment.yml
+++ b/14-ingress/deployment.yml
@@ -18,7 +18,7 @@ spec:
         livenessProbe:
           httpGet:
             path: /
-            schema: HTTP
+            scheme: HTTP
             port: 80
           failureThreshold: 3
           initialDelaySeconds: 30
@@ -48,7 +48,7 @@ spec:
         livenessProbe:
           httpGet:
             path: /
-            schema: HTTP
+            scheme: HTTP
             port: 80
           failureThreshold: 3
           initialDelaySeconds: 30
@@ -77,7 +77,7 @@ spec:
         livenessProbe:
           httpGet:
             path: /
-            schema: HTTP
+            scheme: HTTP
             port: 80
           failureThreshold: 3
           initialDelaySeconds: 30
