--- a/12-persistedVolumes/pv-pod.yml
+++ b/12-persistedVolumes/pv-pod.yml
@@ -13,4 +13,4 @@ spec:
   volumes:
     - name: volume
       persistentVolumeClaim:
-        claimName: azure-managed-disk
+        claimName: myclaim
