--- a/14-ingress/ingress-rules.yaml
+++ b/14-ingress/ingress-rules.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: webapp-ingress
@@ -6,19 +6,29 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-  - host: my.kubernetes.example
-    http:
+#  - host: my.kubernetes.example
+   - http:
       paths:
       - path: /webapp1(.*)
         pathType: Prefix
         backend:
-          serviceName: webapp1-svc
-          servicePort: 80
+          service:
+            name: webapp1-svc
+            port: 
+              number: 80
+      
       - path: /webapp2(.*)
         pathType: Prefix
         backend:
-          serviceName: webapp2-svc
-          servicePort: 80
-      - backend:
-          serviceName: webapp3-svc
-          servicePort: 80
+          service:
+            name: webapp2-svc
+            port:
+              number: 80
+              
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: webapp3-svc
+            port:
+              number: 80
