--- a/17-stateful-set/deploy.yaml
+++ b/17-stateful-set/deploy.yaml
@@ -52,6 +52,10 @@ metadata:
   name: sts-app
 spec:
   type: LoadBalancer
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP: 
+      timeoutSeconds: 30  
   selector:
       app: nginx
   ports:
