--- a/17-stateful-set/deploy.yaml
+++ b/17-stateful-set/deploy.yaml
@@ -1,34 +1,34 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: web-headless
   labels:
-    app: nginx
+    app: app1
 spec:
   ports:
   - port: 8080
     name: web
   clusterIP: None
   selector:
-    app: nginx
+    app: app1
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: web
 spec:
-  serviceName: "nginx"
+  serviceName: "web-headless"
   replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: app1
   template:
     metadata:
       labels:
-        app: nginx
+        app: app1
     spec:
       containers:
-      - name: nginx
+      - name: java-session
         image: mahendrshinde/http-session-java:4
         livenessProbe:
           httpGet:
@@ -51,14 +51,13 @@ spec:
         requests:
           storage: 200Mi
 ---
-## The actual loadbalacer service
 apiVersion: v1
 kind: Service
 metadata:
-  name: sts-app
+  name: web-app
 spec:
   selector:
-      app: nginx
+      app: app1
   ports:
-  - port: 8081
+  - port: 80
     targetPort: 8080
