--- a/17-stateful-set/ingress-rules.yaml
+++ b/17-stateful-set/ingress-rules.yaml
@@ -14,6 +14,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: sts-app
+            name: web-app
             port: 
-              number: 8080
+              number: 80
