--- a/14-ingress/ingress-rules.yaml
+++ b/14-ingress/ingress-rules.yaml
@@ -3,9 +3,9 @@ kind: Ingress
 metadata:
   name: webapp-ingress
   annotations:
-    ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
+  ingressClassName: nginx
   rules:
 #  - host: my.kubernetes.example
    - http:
